Improved about us responsiveness

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,7 @@ public/.DS_Store
 public/.DS_Store
 .DS_Store
 public/images/team/.DS_Store
+.DS_Store
+public/.DS_Store
+public/images/.DS_Store
+public/images/team/.DS_Store
