--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
-    "nodemailer": "^6.4.10",
+    "nodemailer": "^6.4.10"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
