--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "DLS Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devStart": "nodemon script.js"
   },
   "author": "Nick Parsons",
   "license": "ISC",
